--- a/projects/fantatic/frontend/templates/_footer.jade
+++ b/projects/fantatic/frontend/templates/_footer.jade
@@ -59,7 +59,8 @@ footer#footer
             span.t-footerSectionTitle Будь в курсе новостей
             div.t-footerKnowAboutFieldWrap
                 input(type="email" required placeholder="Ваш e-mail").t-footerKnowAboutField
-                button(type="button").t-btn Подписаться
+                button(type="button").t-btn
+                    span Подписаться
     div.t-footerBottom
         span.t-copy © Fantatic 2017
         span.t-made
