--- a/projects/fantatic/frontend/templates/index.jade
+++ b/projects/fantatic/frontend/templates/index.jade
@@ -22,7 +22,8 @@ block content
                             h4 Microsoft Hololens
                             h4 Sony VR
                         div.t-jumboInfoFooter.addOpacity
-                            a(href='#').t-btn Смотреть все
+                            a(href='#').t-btn
+                                span Смотреть все
                             span.t-goodsNames - более 10 наименований
                 div.slide
                     img(src="https://i.ytimg.com/vi/Fbj2R5l6MG0/maxresdefault.jpg")
@@ -33,7 +34,8 @@ block content
                             h4 Google Glass
                             h4 Oculus Rift
                         div.t-jumboInfoFooter
-                            a(href='#').t-btn Смотреть все
+                            a(href='#').t-btn
+                                span Смотреть все
                             span.t-goodsNames - более 10 наименований
                 div.slide
                     img(src="/images/slider/glass.png")
@@ -43,7 +45,8 @@ block content
                         div.t-jumboInfoBody.banDescription
                             p  DOOMSDAY HEIST 2
                         div.t-jumboInfoFooter
-                            a(href='#').t-btn Смотреть все
+                            a(href='#').t-btn
+                                span Смотреть все
         section.t-allCategories
             h2.t-sectionTitle  Все категории
             div.t-allCategoriesSlider
