--- a/projects/fantatic/frontend/templates/_layout.jade
+++ b/projects/fantatic/frontend/templates/_layout.jade
@@ -8,7 +8,6 @@ mixin tCards ()
                             img(src="/images/icons/plus.svg")
                     div.t-goodsCardInfo
                         span.t-goodsCardCategory Подарки с юмором
-                        //a(href="/goodsOrder.html")
                         h3.t-goodsCardDescription.t-goodsNameMain Neca Prometheus Series 1 Deluxe Pressure Suit Engineer
                         span.t-goodsCardPrice.t-goodsPriceMain 32 500 ₽
                         ul.t-starHolder
@@ -32,20 +31,20 @@ mixin tCards ()
                                 span.t-star
                                     svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
                                         path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
-                button(type="button").t-btn.t-addToCart.t-addToCartCard Добавить в корзину
+                button(type="button").t-btn.t-addToCart.t-addToCartCard
+                    span Добавить в корзину
 
 mixin tCards2 ()
     - for(var k = 0; k < 3; k++)
         div.t-goodsCard.t-GoodsCardMain
             a(href="/goodsOrder2.html").t-goodsLink
                 div.t-goodsCardImage
-                    img(src="https://sergiosvision.github.io/img/Person.png").t-goodsCardImg.t-goodsImgMain
+                    img(src="http://multsimpsons.ru/data/uploads/personaji/gomer.png").t-goodsCardImg.t-goodsImgMain
                     div.t-imgOverlay
                         img(src="/images/icons/plus.svg")
                 div.t-goodsCardInfo
                     span.t-goodsCardCategory Подарки с юмором
-                    //a(href="/goodsOrder.html")
-                    h3.t-goodsCardDescription.t-goodsNameMain Nigga from SergiosVision
+                    h3.t-goodsCardDescription.t-goodsNameMain Homer Simpson
                     span.t-goodsCardPrice.t-goodsPriceMain 45 500 ₽
                     ul.t-starHolder
                         li
@@ -68,7 +67,8 @@ mixin tCards2 ()
                             span.t-star
                                 svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink").active
                                     path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
-            button(type="button").t-btn.t-addToCart.t-addToCartCard Добавить в корзину
+            button(type="button").t-btn.t-addToCart.t-addToCartCard
+                span Добавить в корзину
 
 mixin tBottomCardHolder ()
     div.t-bottomInfoCardsHolder
@@ -110,7 +110,9 @@ html(lang="ru-RU")
         link(rel='stylesheet', href="/css/main.min.css")
         link(rel='stylesheet', href="/css/plugins/owl.carousel.min.css")
         link(rel='stylesheet', href="/css/plugins/owl.theme.default.min.css")
+        link(rel='stylesheet', href="/css/plugins/jquery.tosrus.all.css")
     body.t-windowLoading.fixed.t-animeOne
+        div.t-lightBoxOverlay
         div.wrapper
             div.t-astronaut.animation
             div.t-frame
@@ -121,5 +123,7 @@ html(lang="ru-RU")
 
         script(src="/js/vendor.min.js")
         script(src="/js/plugins/owl.carousel.min.js")
+        script(src="/js/plugins/Hammer.js")
+        script(src="/js/plugins/jquery.tosrus.all.min.js")
         script(src="/js/reviewsSlider.js")
         script(src="/js/main.min.js")
