--- a/projects/fantatic/frontend/sass/inside/goods.sass
+++ b/projects/fantatic/frontend/sass/inside/goods.sass
@@ -20,6 +20,8 @@
           width: 100%
           max-height: 512px
           object-fit: contain
+        a
+          outline: none
     .t-aboutGoodsInfoMain
       padding: 24px 32px
       border-left: 1px solid #E0E0E0
