--- a/projects/fantatic/frontend/sass/_default.sass
+++ b/projects/fantatic/frontend/sass/_default.sass
@@ -643,6 +643,8 @@ main
   background-color: #26BFD1
   border-radius: 3px
   cursor: pointer
+  outline: none
+  border: none
   &:before, &:after
     content: ''
     position: absolute
@@ -687,29 +689,36 @@ main
     background-color: #26BFD1
     border-radius: 10px
 
-
-.t-lightBoxOverlay
-  position: fixed
-  left: 0
-  right: 0
+.t-overlay
   top: 0
-  bottom: 0
-  background-color: rgba(0,0,0,.5)
-  z-index: 10000
-  opacity: 0
-  pointer-events: none
-  &.activeOverLay
-    opacity: 1
-    pointer-events: all
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: 1042
+  overflow: hidden
+  position: fixed
+  background: rgba(0,0,0,.5)
+  outline: none
+  border: none
 
-.tos-wrapper.tos-fixed.sliderContainer
-  top: 50%
-  left: 50%
+.mfp-container
+  top: 50%!important
+  left: 50%!important
   transform: translate(-50%, -50%)
-  width: 1296px
-  height: 712px
+  width: 1296px!important
+  height: 712px!important
   z-index: 100000
   border-radius: 24px
-  background-color: rgb(255,255,255)!important
+  background-color: rgb(255,255,255)
+
+.mfp-counter
+  top: 32px
+  left: 32px
+  color: #fff!important
+  font-size: 14px!important
+  background-color: #26BFD1
+  padding: 8px 12px
+  border-radius: 3px
+  font-family: 'Roboto Condensed', sans-serif
 
 
