--- a/projects/fantatic/frontend/templates/_layout.jade
+++ b/projects/fantatic/frontend/templates/_layout.jade
@@ -110,9 +110,8 @@ html(lang="ru-RU")
         link(rel='stylesheet', href="/css/main.min.css")
         link(rel='stylesheet', href="/css/plugins/owl.carousel.min.css")
         link(rel='stylesheet', href="/css/plugins/owl.theme.default.min.css")
-        link(rel='stylesheet', href="/css/plugins/jquery.tosrus.all.css")
+        link(rel='stylesheet', href="/css/plugins/magnific-popup.css")
     body.t-windowLoading.fixed.t-animeOne
-        div.t-lightBoxOverlay
         div.wrapper
             div.t-astronaut.animation
             div.t-frame
@@ -123,7 +122,6 @@ html(lang="ru-RU")
 
         script(src="/js/vendor.min.js")
         script(src="/js/plugins/owl.carousel.min.js")
-        script(src="/js/plugins/Hammer.js")
-        script(src="/js/plugins/jquery.tosrus.all.min.js")
+        script(src="/js/plugins/jquery.magnific-popup.min.js")
         script(src="/js/reviewsSlider.js")
         script(src="/js/main.min.js")
