--- a/projects/fantatic/frontend/sass/allcategories.sass
+++ b/projects/fantatic/frontend/sass/allcategories.sass
@@ -37,8 +37,13 @@
           display: none
         &.active
           background-color: #fff
-          padding: 36px 48px
+          //padding: 36px 48px
+          padding: 36px 0
           border-radius: 24px
+          display: flex
+          flex-direction: column
+          justify-content: center
+          align-items: center
           .t-slideImg
             background: url("/images/icons/bigCase.svg") no-repeat center
             display: block
