--- a/projects/fantatic/frontend/sass/_default.sass
+++ b/projects/fantatic/frontend/sass/_default.sass
@@ -370,25 +370,38 @@ main
   text-decoration: none
   display: inline-block
 .t-goodsCard
+  position: relative
   background-color: #fff
   border-radius: 24px
   width: 304px
   height: 454px
   padding: 32px 32px 0 32px
-  transition: .4s ease
   margin-bottom: 16px
-  overflow: hidden
+  //overflow: hidden
   text-align: center
+  &:before, &:after
+    content: ''
+    width: 100%
+    height: 100%
+    border-radius: 24px
+    position: absolute
+    z-index: -1
+    transition: .3s ease
+  &:before
+    background-color: #ED3237
+    left: -2px
+    top: 1px
+    opacity: 0
+  &:after
+    background-color: #26BFD1
+    right: -2px
+    top: -1px
+    opacity: 0
   .t-goodsCardImage
     width: 240px
     height: 240px
     margin-bottom: 24px
-    transition: .4s ease
-    overflow: hidden
     position: relative
-    overflow: hidden
-    background-color: #fff
-    border-radius: 50%
     cursor: pointer
     .t-imgOverlay
       position: absolute
@@ -396,24 +409,38 @@ main
       right: 0
       top: 0
       bottom: 0
-      height: 100%
-      width: 100%
       background-color: rgba(38, 191, 209, .5)
       border-radius: 50%
-      transform: translateX(500px)
       opacity: 0
-      transition: .4s ease
+      transition: .4s cubic-bezier(0.25, 0.23, 0.21, 0.68)
+      transition-delay: .1s
       img
         position: absolute
         width: 30px
         height: 30px
         top: 50%
         left: 50%
-        transform: translate(-50%, -50%)
-    img
-      width: 100%
-      height: 100%
-      object-fit: contain
+        transform: translate(-50%, -50%) rotate(25deg)
+        transition: .4s ease-in-out
+        transition-delay: .1s
+        overflow: hidden
+    .t-absImgHolder
+      position: absolute
+      width: 240px
+      height: 240px
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
+      background-color: #fff
+      display: block
+      overflow: hidden
+      transition: .4s ease-in-out
+      border-radius: 50%
+      .t-goodsCardImg
+        width: 100%
+        height: 100%
+        object-fit: contain
+        transition: .4s ease-in-out
   .t-goodsCardInfo
     text-align: center
     transition: .4s ease
@@ -442,17 +469,46 @@ main
       li:not(:last-child)
         margin-right: 4px
   .t-addToCart
-    transition: .4s ease
+    transition: .4s cubic-bezier(0.2, 0.23, 0.21, 0.71)
     opacity: 0
     margin: 0 auto
-    transform: translateY(40px)
+    transform: translateY(-18px)
+    pointer-events: none
   &:hover
     .t-imgOverlay
       opacity: 1
-      transform: none
+      animation: bounce .4s linear
+      img
+        transform: translate(-50%, -50%) rotate(0deg)
     .t-addToCart
       opacity: 1
-      transform: translateY(-18px)
+      transform: translateY(-50px)
+      pointer-events: all
+    &:after, &:before
+      opacity: 1
+    .t-goodsCardImg
+      transform: scale(1.1)
+    .t-absImgHolder
+      width: 176px
+      height: 176px
+      left: 50%
+      top: 50%
+      transform: translate(-50%, -50%)
+      border-radius: 50%
+      animation: bounce .4s cubic-bezier(0.25, 0.23, 0.21, 0.68)
+    .t-goodsCardInfo
+      transform: translateY(-34px)
+    .t-cardFigureOne, .t-cardFigureTwo, .t-cardFigureThird
+      opacity: 1
+    .t-cardFigureOne
+      right: -40px
+      top: 24px
+    .t-cardFigureTwo
+      left: -5px
+      top: 24px
+    .t-cardFigureThird
+      bottom: -23px
+      right: 24px
 
 
 .t-catalogHeaderTitle
@@ -721,4 +777,62 @@ main
   border-radius: 3px
   font-family: 'Roboto Condensed', sans-serif
 
+.t-prevBtn
+  left: 32px
+
+.t-nextBtn
+  right: 32px
+
+.t-allCatSliderBtn
+  position: absolute
+  top: 50%
+  transform: translateY(-50%)
+  cursor: pointer
+  z-index: 100
+
+
+@keyframes bounce
+  from, to
+    animation-timing-function: cubic-bezier(0.25, 0.23, 0.21, 0.68)
+
+  0%
+    width: 240px
+    height: 240px
+  50%
+    height: 165px
+    width: 165px
+  100%
+    width: 176px
+    height: 176px
+
+.t-cardFigureOne, .t-cardFigureTwo, .t-cardFigureThird
+  position: absolute
+  z-index: 100
+  pointer-events: none
+  transition: .4s ease-in-out
+  opacity: 0
+
+.t-cardFigureOne
+  background: url("/images/prop/sliderVector.png") no-repeat
+  background-size: contain
+  width: 82px
+  height: 88px
+  right: -10px
+  top: 60px
+
+.t-cardFigureTwo
+  background: url("/images/prop/smallBlueVector.png") no-repeat
+  background-size: contain
+  width: 37.6px
+  height: 11.76px
+  left: 60px
+  top: 100px
+
+.t-cardFigureThird
+  background: url("/images/prop/midBlueVector.png") no-repeat
+  background-size: contain
+  width: 40px
+  height: 43px
+  bottom: 3px
+  right: 70px
 
