--- a/projects/fantatic/frontend/templates/goodsOrder.jade
+++ b/projects/fantatic/frontend/templates/goodsOrder.jade
@@ -15,20 +15,23 @@ block content
             div.t-aboutGoodsCard.t-GoodsCardMain
                 div.t-aboutGoodsImgContainer
                     div.t-insideImg
-                        a(href="/images/goodImage.png")
-                            img(src="/images/goodImage.png").t-goodsImgMain
-                        a(href="/images/goodImage.png").t-hiddenImages
-                            img(src="/images/goodImage.png")
-                        a(href="/images/goodImage.png").t-hiddenImages
-                            img(src="/images/goodImage.png")
-                        a(href="https://sergiosvision.github.io/img/Person.png").t-hiddenImages
-                            img(src="https://sergiosvision.github.io/img/Person.png")
-                        a(href="/images/goodImage.png").t-hiddenImages
-                            img(src="/images/goodImage.png")
-                        a(href="/images/goodImage.png").t-hiddenImages
-                            img(src="/images/goodImage.png")
-                        a(href="/images/goodImage.png").t-hiddenImages
-                            img(src="/images/goodImage.png")
+                        div.t-insideImgHolder
+                            a(href="/images/goodImage.png")
+                                img(src="/images/goodImage.png").t-goodsImgMain
+                            a(href="/images/goodImage.png").t-hiddenImages
+                                img(src="/images/goodImage.png")
+                            a(href="/images/goodImage.png").t-hiddenImages
+                                img(src="/images/goodImage.png")
+                            a(href="https://sergiosvision.github.io/img/Person.png").t-hiddenImages
+                                img(src="https://sergiosvision.github.io/img/Person.png")
+                            a(href="/images/goodImage.png").t-hiddenImages
+                                img(src="/images/goodImage.png")
+                            a(href="/images/goodImage.png").t-hiddenImages
+                                img(src="/images/goodImage.png")
+                            a(href="/images/goodImage.png").t-hiddenImages
+                                img(src="/images/goodImage.png")
+                            div.t-imgOverlay
+                                img(src="/images/icons/plus.svg").t-ScaledCard
                 div.t-aboutGoodsInfoMain
                     div.t-aboutGoodsInfoMainHeader
                         h1.t-titleOfGoods.t-goodsNameMain Neca Prometheus Series 1 Deluxe Pressure Suit Engineer
