--- a/projects/fantatic/frontend/templates/goodsOrder2.jade
+++ b/projects/fantatic/frontend/templates/goodsOrder2.jade
@@ -15,12 +15,15 @@ block content
             div.t-aboutGoodsCard.t-GoodsCardMain
                 div.t-aboutGoodsImgContainer
                     div.t-insideImg
-                        a(href="http://multsimpsons.ru/data/uploads/personaji/gomer.png")
-                            img.t-goodsImgMain(src="http://multsimpsons.ru/data/uploads/personaji/gomer.png")
-                        a(href="/images/goodImage.png").t-hiddenImages
-                            img(src="/images/goodImage.png")
-                        a(href="https://sergiosvision.github.io/img/Person.png").t-hiddenImages
-                            img(src="https://sergiosvision.github.io/img/Person.png")
+                        div.t-insideImgHolder
+                            a(href="http://multsimpsons.ru/data/uploads/personaji/gomer.png")
+                                img.t-goodsImgMain(src="http://multsimpsons.ru/data/uploads/personaji/gomer.png")
+                            a(href="/images/goodImage.png").t-hiddenImages
+                                img(src="/images/goodImage.png")
+                            a(href="https://sergiosvision.github.io/img/Person.png").t-hiddenImages
+                                img(src="https://sergiosvision.github.io/img/Person.png")
+                            div.t-imgOverlay
+                                img(src="/images/icons/plus.svg").t-ScaledCard
                 div.t-aboutGoodsInfoMain
                     div.t-aboutGoodsInfoMainHeader
                         h1.t-titleOfGoods.t-goodsNameMain Homer Simpson
