--- a/projects/fantatic/frontend/sass/inside/goods.sass
+++ b/projects/fantatic/frontend/sass/inside/goods.sass
@@ -13,15 +13,42 @@
         visibility: hidden
         opacity: 0
         pointer-events: none
+        display: none
       .t-insideImg
         width: 100%
-        img
-          display: block
-          width: 100%
-          max-height: 512px
-          object-fit: contain
-        a
-          outline: none
+        height: 100%
+        position: relative
+        .t-insideImgHolder
+          position: absolute
+          top: 0
+          left: 0
+          right: 0
+          bottom: 0
+          transition: .4s ease-in-out
+          img
+            display: block
+            width: 100%
+            max-height: 512px
+            object-fit: contain
+            transition: .4s ease-in-out
+          a
+            outline: none
+            display: block
+      &:hover
+        .t-insideImgHolder
+          position: absolute
+          transform: scale(.6)
+          border-radius: 50%
+          overflow: hidden
+          animation: bounce2 .4s cubic-bezier(0.25, 0.23, 0.21, 0.68)
+          img
+            border-radius: 50%
+            transform: scale(1.1)
+            transition: .4s cubic-bezier(0.25, 0.23, 0.21, 0.68)
+        .t-imgOverlay
+          opacity: 1
+          .t-ScaledCard
+            transform: none
     .t-aboutGoodsInfoMain
       padding: 24px 32px
       border-left: 1px solid #E0E0E0
